app displays prediction from model

--- a/web_app/templates/upload.html
+++ b/web_app/templates/upload.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>Python Flask File Upload Example</title>
 <h2>Select a file to upload</h2>
+
 <p>
 	{% with messages = get_flashed_messages() %}
 
@@ -15,13 +16,8 @@
 	{% endwith %}
 </p>
 
-{% if filename %}
-	<div>
-		<img src="{{ url_for('display_image', filename=filename) }}">
-	</div>
-{% endif %}
 
-<form method="post" action="/upload/" enctype="multipart/form-data">
+<form method="post" action="/" enctype="multipart/form-data">
     <dl>
 		<p>
 			<input type="file" name="file" autocomplete="off" required>
