work to display raw image

--- a/web_app/templates/results.html
+++ b/web_app/templates/results.html
@@ -7,16 +7,10 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
-        <title>Original image and prediction</title>
     </head>
     <body>
         <h1>How close was the model?</h1>
-        <img src={{raw_image}} class="rounded float-start" alt="original">
-        <!-- <img src="..." class="rounded float-end" alt="processed"> -->
-        <p>{{prediction_text}}</p>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"\
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <img src="{{ url_for(raw_image) }}">
+        <img src="{{ url_for('static/uploads', filename=raw_image) }}">
     </body>
 </html>
