--- a/web_app/templates/upload.html
+++ b/web_app/templates/upload.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Python Flask File Upload Example</title>
-<h2>Select a file to upload</h2>
+<h2>Select a License Plate image</h2>
 
 <p>
 	{% with messages = get_flashed_messages() %}
